<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LuoJI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_contentdescription">imagecontentDescription</string>
    <string name="recommendfragment_item_book_online">在线阅读</string>
    <string name="recommendfragment_item_book_download">下载</string>
    <!-- 用户设定定义 -->
    <string name="setting_txt_title">用户设定</string>
    <string name="setting_txt_font_color">字体颜色</string>
    <string name="setting_txt_bg_color">背景颜色</string>
    <string name="setting_txt_font_size">字体大小</string>
    <string name="setting_txt_scr_brightness">屏幕亮度</string>
    <string name="setting_txt_setting_prev">这是一段测试文字，表示当前的用户设定。</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="title_activity_read_book">ReadBookActivity</string>

    <!-- 盛月茂定义的字段 -->
    <string name="classifyfragment_classify_grils">女生</string>
    <string name="classifyfragment_classify_suspense">悬念</string>
    <string name="classifyfragment_classify_panic">惊悚</string>
    <string name="classifyfragment_classify_cartoon">漫画</string>
    <string name="classifyfragment_classify_fantasy">玄幻</string>
    <string name="classifyfragment_classify_swordsman">武侠</string>
    <string name="classifyfragment_classify_youth">青春</string>
    <string name="classifyfragment_classify_emotion">情感</string>
    <string name="readedfragment_readed_add_tag">添加标签</string>

    <!-- bookpop.xml -->
    <string name="bookpop_size">字体</string>
    <string name="bookpop_light">亮度</string>
    <string name="bookpop_card">书签</string>
    <string name="bookpop_send">跳转</string>
    <string name="title_activity_info_self">InfoSelfActivity</string>
    
    <!-- cartcoon -->
    <string name="cartoon_logout_title">提示</string>
    <string name="cartoon_logout_body">确定退出</string>
    <string name="cartoon_logout_submit">是</string>
    <string name="cartoon_logout_cancel">否</string>
    <string name="cartoon_firstPage">第一页</string>
    <string name="cartoon_beforePage">上一页</string>
    <string name="cartoon_nextPage">下一页</string>
    <string name="cartoon_lastPage">最后一页</string>
    <string name="cartoon_pageTitle">跳转到</string>
    <string name="cartoon_pageFirst">当前位置是第一页</string>
    <string name="cartoon_pageEnd">当前位置是最后一页</string>
    <string name="cartoon_pageCancel">取 消</string>

</resources>