<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="144dp"
    android:layout_margin="8dp"
    android:background="@drawable/ic_background"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/recommendfragment_item_book_image"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/image_contentdescription"
        android:src="@drawable/bookpricture" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/recommendfragment_item_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/recommendfragment_item_book_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/recommendfragment_item_book_online"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="#afafaf"
                android:text="@string/recommendfragment_item_book_online" />

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/recommendfragment_item_book_download"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="#afafaf"
                android:text="@string/recommendfragment_item_book_download" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>